# pockety

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: GitVersion.cmake
docs/: CMakeLists.txt
libs/: .gitignore  CMakeLists.txt  googletest.cmake
src/app/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/integration/dummy/: CMakeLists.txt  dummy-test.cpp
test/unit/: CMakeLists.txt
test/unit/dummy/: CMakeLists.txt  dummy-test.cpp
